--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -17,7 +17,8 @@
 著名的英国科学家图灵被称为人工智能之父,图灵不仅创造了一个简单的通用的非数字计算模型，而且直接证明了计算机可能以某种被理解为智能的方法工作。提出了著名的图灵测试。\par
 数理逻辑从19世纪末起就获迅速发展；到20世纪30年代开始用于描述智能行为。计算机出现后，又在计算机上实现了逻辑演绎系统。\par
 1943年由生理学家麦卡洛克(McCulloch)和数理逻辑学家皮茨(Pitts)创立的脑模型，即MP模型。60-70年代，联结主义，尤其是对以感知机(perceptron)为代表的脑模型的研究曾出现过热潮。\par
-控制论思想早在40-50年代就成为时代思潮的重要部分，影响了早期的人工智能工作者。到60-70年代，控制论系统的研究取得一定进展，播下智能控制和智能机器人的种子。 
+控制论思想早在40-50年代就成为时代思潮的重要部分，影响了早期的人工智能工作者。到60-70年代，控制论系统的研究取得一定进展，播下智能控制和智能机器人的种子。\par
+20世纪80年代后期以来，机器学习、计算智能、人工神经网络和行为主义等研究的深入开展，不时形成高潮。
 \end{solution}
 
 \begin{question}
@@ -31,6 +32,8 @@
 为什么能够用机器（计算机）模仿人的智能？
 \end{question}
 \begin{solution}
+所谓符号就是模式。任一模式，只要它能与其他模式相区别，就是一个符号。一个完善的符号系统应具有下列6种基本功能：（1）输入符号；（2）输出符号；（3）存储符号；（4）复制符号；（5）建立符号结构：通过找出各符号间的关系，在符号系统中形成符号结构；（6）条件性迁移：根据已有符号，继续完成活动过程。\par
+如果一个物理符号系统具有上述全部6种功能，能够完成这个全过程，那么它就是一个完整的物理符号系统。人具有上述6种功能，现代计算机也具备物理符号系统的这6种功能。\par
 物理符号系统假设：任何一个系统，如果它能够表现出智能，那么它就必定能够执行输入符号、输出符号、存储符号、复制符号、建立符号结构、条件性迁移6种功能。反之，任何系统如果具有这6种功能，那么它就能够表现出智能；这种智能指的是人类所具有的那种智能。\par
 物理符号系统的假设伴随有3个推论：\par
 	\begin{enumerate}
@@ -75,14 +78,28 @@
 		\item 创造有用的灵巧程序 \par 
 		该程序能够执行一般需要人类专家才能实现的任务。
 	\end{enumerate} \par 
-	一般地，人工智能的研究目标又分为近期研究目标和远期研究目标两种。近期研究目标时间早智能计算机以代替人类的某些智力活动；远期目标是用自动机模仿人类的思维活动和智力功能。
+	一般地，人工智能的研究目标又分为近期研究目标和远期研究目标两种。\par
+	人工智能的近期研究目标是建造智能计算机以代替人类的某些智力活动。为了实现这个近期目标，就需要研究开发能够模仿人类的这些智力活动的相关理论、技术和方法，建立相应的人工智能系统。\par
+	人工智能的远期目标是用自动机模仿人类的思维活动和智力功能，要建造能够实现人类思维活动和治理功能的智能系统。\par
+	人工智能研究的近期目标和远期目标具有不可分割的关系。一方面，近期目标的实现为远期目标奠定了理论和技术基础，打下必要的基础，并增强人们实现远期目标的信心；另一方面，远期目标为近期目标指明了方向，强化了近期研究目标的战略地位。
 \end{solution}
 
 \begin{question}
 人工智能研究包括哪些内容？这些内容的重要性如何？
 \end{question}
 \begin{solution}
-分布式人工智能、知识工程和专家系统、自然语言处理、机器学习、机器人、模式识别、自动定理证明、自动程序设计、智能数据库、智能检索等。
+人工智能学科有着十分广泛和及其丰富的研究内容，包括：
+\begin{enumerate}
+		\item 认知建模：认知科学是要说明人类在认知过程中是如何进行信息加工的。是人工智能的重要理论基础，涉及非常广泛的研究课题。\par
+		\item 知识表示：是把人类知识概念化、形式化或模型化。按照符号主义的观点，知识是一切智能行为的基础，要使计算机具有智能，首先必须使它拥有知识。问题、系统的任务描述、知识表示和推理决策，离不开知识。知识表示是人工智能的中心任务之一。\par
+		\item 知识推理：推理是人脑的基本功能。几乎所有的人工智能领域都离不开推理。要让机器实现人工智能，就必须赋予机器推理能力，进行机器推理。\par
+		\item 知识应用：人工智能能够获得广泛应用是衡量其生命力和检验其生存力的重要标志。20世纪70年代，专家系统的广泛应用使人工智能走出低谷，获得快速发展。后来的机器学习和近年来的自然语言理解应用研究取得重大进展，又促进了人工智能的进一步发展。当然，应用领域的发展是离不开知识表示和知识推理等基础理论以及基本技术的进步的。\par
+		\item 机器感知：是使机器具有类似于人的感觉。其中，最主要的和应用最广的要算机器视觉和机器听觉。机器感知是机器获取外部信息的基础途径。要使机器具有感知能力，就要为它安上各种传感器。机器视觉和机器听觉已催生了人工智能的两个研究领域和—模式识别和自然语言理解或自然语言处理。\par
+		\item 机器思维：机器思维是对传感信息和机器内部的工作信息进行有目的的处理。要使机器实现思维，需要综合应用知识表示、知识推理、认知建模和机器感知等方面的研究成果。\par
+		\item 机器学习：机器学习是继专家系统之后人工智能应用的又一重要研究领域，也是人工智能和神经计算的核心研究课题之一。现有的计算机系统和人工智能系统大多数没有什么学习能力，至多也只有非常有限的学习能力，因而不能满足科技和生产提出的新要求。学习是人类具有的一种重要智能行为。机器学习就是使机器具有学习新知识和新技术，并在实践中不断改进和完善的能力。机器学习能够使机器自动获取知识，向书本等文献资料和与人交谈或观察环境进行学习。\par
+		\item 机器行为：机器行为是指智能系统具有的表达能力和行动能力。研究机器的拟人行为是人工智能的高难度的任务。机器行为与机器思维密切相关，机器思维是机器行为的基础。\par
+		\item 智能系统构建：上述直接的实现智能研究，离不开智能计算机系统或智能系统，离不开对新理论、新技术和新方法以及系统的硬件和软件支持。需要开展对模型、系统构造与分析技术、系统开发环境和构造工具以及人工智能程序设计语言的研究。一些能够简化演绎、机器人操作和认知模型的专用程序设计以及计算机的分布式系统、并行处理系统、多机协作系统和各种计算机网络等的发展，将直接有益于人工智能的开发。\par
+\end{enumerate} \par 		
 \end{solution}
 
 \begin{question}
@@ -95,7 +112,8 @@
 		\item 结构模拟法。连接主义学派也可称为结构模拟学派。
 		\item 行为模拟法。行为主义学派也可称为行为模拟学派。
 		\item 集成模拟法。集成主义学派也可称为集成模拟学派。
-	\end{enumerate}
+	\end{enumerate}\par
+	上述前3种人工智能研究方法各有长处，又有一定的局限性。采用集成模拟方法研究人工智能，一方面各学派密切合作，取长补短，可把一种方法无法解决的问题转化为另一方法能够解决的问题；另一方面，逐步建立统一的人工智能理论体系和方法论，在一个统一系统中集成了逻辑思维、形象思维和进化思想，创造人工智能更先进的研究方法。
 \end{solution}
 
 \begin{question}
@@ -103,9 +121,5 @@
 \end{question}
 \begin{solution}
 人工智能的主要研究和应用领域有：问题求解与博弈（下棋程序），逻辑推理与定理证明（四色定理证明），计算智能，分布式人工智能与Agent，自动程序设计，专家系统，机器学习，自然语言理解，机器人学（星际探索机器人），模式识别（手写识别，汽车牌照识别，指纹识别），机器视觉（机器装配，卫星图像处理），神经网络，智能控制，智能调度与指挥（汽车运输高度，列车编组指挥），智能检索，系统与语言工具等。 \par
-其中新的研究热点有：分布式人工智能与Agent，计算智能与进化计算，数据挖掘与知识发现，人工生命。
+其中新的研究热点有：概率图模型（隐马尔科夫模型、贝叶斯网络），统计学习理论(SLT)\& 支持向量机（SVM）、分布式人工智能与Agent，计算智能与进化计算，数据挖掘与知识发现，人工生命。
 \end{solution}
-
-\begin{question}
-你对人工智能课程教学有何意见和建议？
-\end{question}
