--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -5,10 +5,10 @@
 \end{question}	
 \begin{solution}
 状态空间法：基于解答空间的问题表示和求解方法，它是以状态和算符为基础来表示和求解问题的。一般用状态空间法来表示下述方法：从某个初始状态开始，每次加一个操作符，递增的建立起操作符的试验序列，直到达到目标状态为止。 \par
-问题规约法：已知问题的描述，通过一系列变换把此问题最终变成一个子问题集合：这些子问题的解可以直接得到，从而解决了初始问题。问题规约的实质：从目标（要解决的问题）出发逆向推理，建立子问题以及子问题的子问题，直至最后把出示问题规约为一个平凡的本原问题集合。 \par
+问题规约法：已知问题的描述，通过一系列变换把此问题最终变成一个子问题集合：这些子问题的解可以直接得到，从而解决了初始问题。问题规约的实质：从目标（要解决的问题）出发逆向推理，建立子问题以及子问题的子问题，直至最后把出示问题规约为一个平凡的本原问题集合。状态空间法是问题归约法的一种特例。在问题归约法的与或图中，包含有与节点和或节点，而在状态空间法中只含有或节点。 \par
 谓词逻辑法：采用谓词合式公式和一阶谓词算法。要解决的问题变为一个有待证明的问题，然后采用消解定理和消解反演莱证明一个新语句是从已知的正确语句导出的，从而证明这个新语句也是正确的。\par
-语义网络法：是一种结构化表示方法，它由节点和弧线或链组成。节点用于表示物体、概念和状态，弧线用于表示节点间的关系。语义网络的解答是一个经过推理和匹配而得到的具有明确结果的新的语义网络。语义网络可用于表示多元关系，扩展后可以表示更复杂的问题。\par
-它们的本质都是对一具体事实知识表示，只是表示的方法不同。对于同一问题可以有许多不同的表示方法。不过对于特点个问题，有的表示方法比较有效，其他表示方法可能不大适用，或者不是好的表示方法。在表示和求解比较复杂的问题时，采用单一的知识表示方法是远远不够的，往往必须采用多种方法混合表示。此外，在选择知识表示方法时，还要考虑所使用的程序设计语言所提供的功能和特点，以便能够更好地描述这些表示方法。
+语义网络法：是一种结构化表示方法，它由节点和弧线或链组成。节点用于表示物体、概念和状态，弧线用于表示节点间的关系。语义网络的解答是一个经过推理和匹配而得到的具有明确结果的新的语义网络。语义网络可用于表示多元关系，扩展后可以表示更复杂的问题。语义网络法与谓词逻辑法等效。\par
+它们的本质都是对一具体事实知识表示，只是表示的方法不同。对于同一问题可以有许多不同的表示方法。不过对于特定问题，有的表示方法比较有效，其他表示方法可能不大适用，或者不是好的表示方法。在表示和求解比较复杂的问题时，采用单一的知识表示方法是远远不够的，往往必须采用多种方法混合表示。此外，在选择知识表示方法时，还要考虑所使用的程序设计语言所提供的功能和特点，以便能够更好地描述这些表示方法。
 \end{solution}
 
 \begin{question}
@@ -69,7 +69,7 @@
 试用四元数列结构表示四圆盘梵塔问题，并画出求解该问题的与或图。
 \end{question}
 \begin{solution}
-用四元数列$(n_A, n_B, n_C, n_D)$来表示A、B、C、D盘分别落在$n_A$、$n_B$、$n_C$、$n_D$号柱子上。则问题科的初始状态为$(1,1,1,1)$，目标状态为$(3,3,3,3)$。\par
+用四元数列$(n_A, n_B, n_C, n_D)$来表示A、B、C、D盘分别落在$n_A$、$n_B$、$n_C$、$n_D$号柱子上。则问题的初始状态为$(1,1,1,1)$，目标状态为$(3,3,3,3)$。\par
 求解问题的与或图如图\ref{Fig:and-or-tree-for-hannoi}，按从上往下的顺序，依次处理每一个叶结点，搬动圆盘，问题得解。
 \end{solution}
 
@@ -202,6 +202,6 @@
 框架和本体有何关系与区别？
 \end{question}
 \begin{solution}
-框架是一种结构化表示方法。框架通常由指定事物各个方面的槽组成，每个槽拥有若干个侧面，而每个侧面又可拥有若干个值。大多数实用系统必须同时使用许多框架，并可把它们联成一个框架系统。框架表示已获广泛应用，然而并非所有问题都可以用框架表示。\\
+框架是一种结构化表示方法。框架通常由指定事物各个方面的槽组成，每个槽拥有若干个侧面，而每个侧面又可拥有若干个值。大多数实用系统必须同时使用许多框架，并可把它们联成一个框架系统。框架表示已获广泛应用，然而并非所有问题都可以用框架表示。\par
 本体是概念化的一个显示规范说明或表示。本体可定义为被共享的概念化的一个形式规范说明。本体是一种比框架更有效的表示方法。
 \end{solution}
