--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -33,7 +33,7 @@
 	\begin{description}
 		\item[宽度优先搜索] 只要问题有解，用宽度优先搜索总可以得到解，而且得到的是路径最短的解。宽度优先搜索盲目性较大，当目标节点距初始节点较远时将会产生许多无用节点，搜索效率低。
 		\item[深度优先搜索] 搜索一旦进入某个分支，就将沿着该分支一直向下搜索。如果目标节点恰好在此分支上，则可较快地得到解。但是，如果目标节点不在此分支上，而该分支又是一个无穷分支，则就不可能得到解。所以深度优先搜索是不完备的，即使问题有解，它也不一定能求得解。所求得的解答路径不一定是最短路径。
-		\item[有界深度优先搜索] 如果问题有解，且其路径长度$\leq dm$，则搜索过程一定能求得解。但是，若解的路径长度$> dm$，则搜索过程就得不到解。这说明在有界深度优先搜索中，深度界限的选择是很重要的。要恰当地给出$dm$的值是比较困难的。即使能求出解，它也不一定是最优解。
+		\item[有界深度优先搜索] 如果问题有解，且其路径长度$\leq d_m$，则搜索过程一定能求得解。但是，若解的路径长度$> d_m$，则搜索过程就得不到解。这说明在有界深度优先搜索中，深度界限的选择是很重要的。要恰当地给出$d_m$的值是比较困难的。即使能求出解，它也不一定是最优解。
 		\item[等代价搜索] 是宽度优先搜索的一种推广，不是沿着等长度路径断层进行扩展，而是沿着等代价路径断层进行扩展。搜索树中每条连接弧线上的有关代价，表示时间、距离等花费。若所有连接弧线具有相等代价，则简化为宽度优先搜索算法。
 		\item[盲目搜索] 具有较大的盲目性，产生的无用节点较多，效率不高，耗费过多的计算空间与时间。
 		\item[有序搜索] 利用启发信息，决定哪个是下一步要扩展的节点。选``最有希望''的节点作为下一个被扩展的节点。选择OPEN表上具有最小$f$值的节点作为下一个要扩展的节点, 又称为最佳优先搜索。正确选择估价函数对搜索结果具有决定性的作用。使用不能识别某些节点真实希望的估价函数会形成非最小代价路径；使用一个过多地估计了全部节点希望的估价函数又会扩展过多的节点。 
@@ -174,10 +174,10 @@
 \end{solution}
 
 \begin{question}
-应用最新的方法表达传教士和野人问题，编写一个计算机程序，以求得安全渡过全部$6$个人的解答。（提示：在应用状态空间表示和搜索方法时，可用$(N_m,N_c)$来表示状态描述，其中$N_m$和$N_c$分别为传教士和野人的人数。初始状态为$(3,3)$，而可能的中间状态为$(0,1)$,$(0,2)$,$(0,3)$,$(1,1)$,$(2,1)$,$(2,2)$,$(3,0)$,$(3,1)$和$(3,2)$等。
+应用最新的方法表达传教士和野人问题，编写一个计算机程序，以求得安全渡过全部$6$个人的解答。
 \end{question}
 \begin{solution}
-略。
+提示：在应用状态空间表示和搜索方法时，可用$(N_m,N_c)$来表示状态描述，其中$N_m$和$N_c$分别为传教士和野人的人数。初始状态为$(3,3)$，而可能的中间状态为$(0,1)$,$(0,2)$,$(0,3)$,$(1,1)$,$(2,1)$,$(2,2)$,$(3,0)$,$(3,1)$和$(3,2)$等。
 \end{solution}
 
 \begin{question}
@@ -305,7 +305,8 @@
 在什么情况下需要采用不确定推理或非单调推理？
 \end{question}
 \begin{solution}
-不完全的信息、不断变化的情况、以及求解复杂问题过程中生成的假设。
+随着信息与知识的增加，并没有在肯定原来的结论基础上，增加了更多并立的知识与结论，而是否定了原先结论并有了新的看法。非单调推理其实质就是指推理产生的结论与系统知识库中原有知识发生矛盾、不相容、或者说违背了常规，也就是说，推理中系统知识库的知识增长呈现了非单调性。\par
+不确定性推理，是指其推理过程中，由于各种偶然性误差、干扰以及证据的不确定性等因素，导致所获得的结果或结论本身具有未置可否的不确定性。一般来说，出现不精确推理的原因和特征可能有：证据不足或称为证据的不确定性；规则的不确定性；研究方法的不确定性。 
 \end{solution}
 
 \begin{question}
