--- a/Chapter_5.tex
+++ b/Chapter_5.tex
@@ -37,8 +37,8 @@ CI智能是最低的，它没有知识，就是数据计算。从复杂性来看
 		\item 硬件实现 \\
 神经网络不仅能够通过软件而且可以借助硬件实现并行处理。近年来，一些超大规模集成电路实现硬件已经问世，而且可以从市场上购买到。这使得神经网络成为具有快速和大规模处理能力的网络。
 	\end{enumerate} \par
-	显然，神经网络由于其学习和适应、自组织、函数逼近和大规模并行处理等能力，因而具有用于智能系统的潜力。\\
-神经网络在模式识别、信号处理、系统辨识和优化等方面的应用，已有广泛研究。在控制领域，已经做出许多努力，把神经网络用于控制系统，处理控制系统的非线性和不确定性以及逼近系统的辨识函数等。
+	显然，神经网络由于其学习和适应、自组织、函数逼近和大规模并行处理等能力，因而具有用于智能系统的潜力。\par
+	神经网络在模式识别、信号处理、系统辨识和优化等方面的应用，已有广泛研究。在控制领域，已经做出许多努力，把神经网络用于控制系统，处理控制系统的非线性和不确定性以及逼近系统的辨识函数等。
 \end{solution}
 
 \begin{question}
@@ -124,13 +124,6 @@ CI智能是最低的，它没有知识，就是数据计算。从复杂性来看
 \end{solution}
 
 \begin{question}
-试实现一个分层前馈神经网络的数据结构，为正向评价和反向传播提供所需信息。应用这个数据结构，写出一个神经网络输出，以作为一个例子，并计算该网络适当的输出值。
-\end{question}
-\begin{solution}
-略。
-\end{solution}
-
-\begin{question}
 什么是模糊性？它的对立含义是什么？试各举出两个例子加以说明。
 \end{question}
 \begin{solution}
@@ -207,13 +200,6 @@ CI智能是最低的，它没有知识，就是数据计算。从复杂性来看
 最常用的遗传操作分别是复制（选择）、交叉和变异。①复制：父代将遗传因子毫不改变地遗传给子代。②变异：遗传因子发生了变化，可以避免搜索陷入局部最优，可以在当前解附近找到更好的解，同时还可以保持种群的多样性，确保种群能够继续进化。③交叉：需要两个父代染色体配合进行。
 	\item 反复运用遗传算子直到终止条件满足。
 \end{enumerate}
-\end{solution}
-
-\begin{question}
-用遗传算法求$f(x)=x\cos x + 2$的最大值。
-\end{question}
-\begin{solution}
-略。
 \end{solution}
 
 \begin{question}
