--- a/Chapter_6.tex
+++ b/Chapter_6.tex
@@ -43,6 +43,7 @@
 		解释器能够向用户解释专家系统的行为，包括解释推理结论的正确性以及系统输出其它候选解的原因。 
 		\item 接口（interface）\par
 		接口又称界面，它能够使系统与用户进行对话，使用户能够输入必要的数据、提出问题和了解推理过程及推理结果等。系统则通过接口，要求用户回答提问，并回答用户提出的问题，进行必要的解释。
+	
 	\end{enumerate}
 \end{solution}
 
@@ -87,6 +88,9 @@
 	\item 推理机。由所有操纵知识库来演绎用户要求的信息的过程构成——如消解、前向链或反向链。\par
 	\item 用户界面。可能包括某种自然语言处理系统，它允许用户用一个有限的自然语言形式与系统交互。也可是用带有菜单的图形接口界面。\par
 	\item 解释器。分析被系统执行的推理结构，并把它解释给用户。
+	\item 开发界面。知识工程师通过该界面对专家系统进行开发。
+	\item 工作存储器。建立人的短期存储器模型，存放问题事实和由规则激发而推断出的新事实。
+	\item 外部程序。如数据库、扩展盘和算法等，对专家系统的工作起支持作用。它们应易于为专家系统所访问和使用。
 	\end{enumerate}
 \end{solution}
 
