--- a/Chapter_7.tex
+++ b/Chapter_7.tex
@@ -4,18 +4,28 @@
 什么是学习和机器学习？为什么要研究机器学习？
 \end{question}
 \begin{solution}
-按照人工智能大师西蒙的观点，学习就是系统在不断重复的工作中对本身能力的增强或者改进，使得系统在下一次执行同样任务或类似任务时，会比现在做得更好或效率更高。机器学习是研究如何使用机器来模拟人类学习活动的一门学科，是机器学习是一门研究机器获取新知识和新技能，并识别现有知识的学问。这里所说的“机器”，指的就是计算机。现有的计算机系统和人工智能系统没有什么学习能力，至多也只有非常有限的学习能力，因而不能满足科技和生产提出的新要求。 
+按照人工智能大师西蒙的观点，学习就是系统在不断重复的工作中对本身能力的增强或者改进，使得系统在下一次执行同样任务或类似任务时，会比现在做得更好或效率更高。\par
+机器学习是研究如何使用机器来模拟人类学习活动的一门学科，是机器学习是一门研究机器获取新知识和新技能，并识别现有知识的学问。这里所说的“机器”，指的就是计算机。现有的计算机系统和人工智能系统没有什么学习能力，至多也只有非常有限的学习能力，因而不能满足科技和生产提出的新要求。 
 \end{solution}
 
 \begin{question}
 试述机器学习系统的基本结构，并说明各部分的作用。
 \end{question}
 \begin{solution}
-机器学习系统基本结构如图××。环境向系统的学习部分提供某些信息，学习部分利用这些信息修改知识库，以增进系统执行部分完成任务的效能，执行部分根据知识库完成任务，同时把获得的信息反馈给学习部分。影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。 
+机器学习系统基本结构如教材图7.1。环境和知识库是以某种知识表示形式表达的信息的集合，分别代表外界信息来源和系统所具有的知识；学习环节和执行环节代表两个过程。\par
+知识库里存放的是指导执行部分动作的一般原则，环境向系统的学习部分提供某些信息，学习部分利用这些信息修改知识库，以增进系统执行部分完成任务的效能，执行部分根据知识库完成任务，同时把获得的信息反馈给学习部分。\par
+影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。 
 \end{solution}
 
 \begin{question}
 简介决策树学习的结构。
+\end{question}
+\begin{solution}
+决策树由一系列节点和分支组成；在节点和子节点之间形成分支，节点代表决策或学习过程中所考虑的属性，而不同属性形成不同的分支。为了使用决策树对某一事例进行学习，做出决策，可以利用该事例的属性值并由决策树的树根往下搜索，直至叶节点止，此叶节点即包含学习或决策结果。
+\end{solution}
+
+\begin{question}
+决策树学习的主要学习算法为何？
 \end{question}
 \begin{solution}
 \end{solution}
@@ -65,17 +75,16 @@
 \end{solution}
 
 \begin{question}
-用C语言编写一套计算机程序，用于执行BP学习算法。
+试述解释学习的基本原理、学习形式和功能。
 \end{question}
 \begin{solution}
-略。
-\end{solution}
-
-\begin{question}
-试应用神经网络模型优化求解销售员旅行问题。
-\end{question}
-\begin{solution}
-略。
+解释学习根据任务所在领域知识和正在学习的概念知识，对当前实例进行分析和求解，得出一个表征求解过程的因果解释树，以获取新的知识。在获取新知识的过程中，通过对属性、表征现象和内在关系等进行解释而学习到新的知识。、\par
+解释学习一般包括3个步骤：
+	\begin{enumerate}
+		\item 利用基于解释的方法对训练实例进行分析与解释，以说明它是目标概念的一个实例。
+		\item 对实例的结构进行概括性解释，建立该训练实例的一个解释结构以满足所学概念的定义。
+		\item 从解释结构中识别出训练实例的特性，并从中得到更大一类例子的概括性描述，获取一般控制知识。
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
@@ -123,8 +132,8 @@
 		\item 数据挖掘 
 		\item 知识评价 \par
 		对所获得的规则进行价值评定，以决定所得到的规则是否存入基础知识库 
-	\end{enumerate}
-知识发现的全过程，可进一步归纳为三个步骤，即数据挖掘预处理、数据挖掘、数据挖掘后处理。 
+	\end{enumerate}\par
+	知识发现的全过程，可进一步归纳为三个步骤，即数据挖掘预处理、数据挖掘、数据挖掘后处理。 
 \end{solution}
 
 \begin{question}
@@ -170,12 +179,14 @@
 增强学习有何特点？学习自动机的学习模式为何？
 \end{question}
 \begin{solution}
-略。
+增强学习中，学习系统根据从环境中反馈信号的状态（奖励/惩罚），调整系统的参数。方法比较通用，对学习背景知识要求较少，适用于复杂、动态的环境，但学习一般比较困难，主要是因为学习系统并不知道哪个动作是正确的，也不知道哪个奖惩赋予哪个动作。\par
+学习自动机的学习机制包括两个模块：学习自动机和环境。学习过程是根据环境产生的刺激开始的。自动机根据所接收到的刺激，对环境做出反应，环境接收到该反应对其做出评估，并向自动机提供新的刺激。学习系统根据自动机上次的反应和当前的输入自动调整其参数。见教材图7.15所示。
 \end{solution}
 
 \begin{question}
 什么是$Q^-$学习？它有何优缺点？
 \end{question}
 \begin{solution}
-略。
+$Q^-$学习是一种基于视察策略的增强学习，它是指定在给定的状态下，在执行完某个动作后期望得到的效用函数，该函数为动作-值函数。
+$Q^-$学习在实际中取得了很多应用，可以解决无背景模型的学习问题。但也存在一些问题：概况问题；动态和不确定环境等。
 \end{solution}
