modify 2.6 semantic network figs

--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -179,10 +179,13 @@
 \end{question}
 \begin{solution}
 如图\ref{Fig:semantic-net}。
-	\begin{figure}[h]
+	\begin{figure} [h]
 		\centering
-		\includegraphics[scale=.9]{figures/ans-2.8.pdf}
-		\caption{ 所求语义网络 } \label{Fig:semantic-net}
+		\captionsetup{justification=centering}
+		\subfloat[All men are moral.]{\label{Fig:semantic-net-1}\input{figures/ans-2.8.1-semantic-net.tex}}\vfill
+		\subfloat[Every cloud has a silver lining.]{\label{Fig:semantic-net-2}\input{figures/ans-2.8.2-semantic-net.tex}}\vfill
+		\subfloat[All branch manager of DEC participate in a profit-sharing plan.]{\label{Fig:semantic-net-3}\input{figures/ans-2.8.3-semantic-net.tex}}
+	    \caption{ 所求语义网络 } \label{Fig:semantic-net}
 	\end{figure}
 \end{solution}
 
